--- a/pages/home-music/home-music.wxml
+++ b/pages/home-music/home-music.wxml
@@ -16,7 +16,7 @@
   <area-header title="推荐歌曲" bind:click='handleMoreClick'></area-header>
   <view class="song-list">
     <block wx:for="{{recommendSongs}}" wx:key="id">
-      <song-item-v1 item="{{item}}"></song-item-v1>
+      <song-item-v1 item="{{item}}" bindtap="handleSongItemClick" data-index="{{index}}"></song-item-v1>
     </block>
   </view>
 </view>
@@ -32,5 +32,17 @@
     <block wx:for="{{rankings}}" wx:key="name">
       <ranking-area-item item="{{item}}" bindtap="handleRankingClick" data-idx="{{index}}"></ranking-area-item>
     </block>
+  </view>
+</view>
+
+<!-- 播放工具栏 -->
+<view class="play-bar">
+  <view class="left">
+    <image class="album" mode="aspectFill" src="{{currentSong.al.picUrl}}"></image>
+    <view class="name">{{currentSong.name}}</view>
+  </view>
+  <view class="right">
+    <image class="icon play" src="/assets/images/music/play_icon.png"></image>
+    <image class="icon playlist" src="/assets/images/music/playlist_icon.png"></image>
   </view>
 </view>
