--- a/pages/home-music/home-music.wxss
+++ b/pages/home-music/home-music.wxss
@@ -16,3 +16,44 @@ page {
 .swiper-item .swiper-image {
   width: 100%;
 }
+
+/* 播放工具栏 */
+.play-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 44px;
+  background-color: #FFE8AC;
+  box-shadow: 0 -1px 5px rgba(0,0,0,0.2);
+}
+
+.play-bar .left,.play-bar .right {
+  display: flex;
+  align-items: center;
+}
+
+.play-bar .left .album {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+
+.play-bar .left .name {
+  font-size: 14px;
+  margin-left: 10rpx;
+}
+
+.play-bar .right .icon {
+  width: 30px;
+  height: 30px;
+}
+
+.play-bar .right .play {
+  width: 25px;
+  height: 25px;
+  margin-right: 10rpx;
+}
