--- a/pages/home-music/home-music.wxml
+++ b/pages/home-music/home-music.wxml
@@ -36,13 +36,23 @@
 </view>
 
 <!-- 播放工具栏 -->
-<view class="play-bar">
+<view class="play-bar-placeholder" wx:if="{{currentSong.id}}"></view>
+<view class="play-bar" wx:if="{{currentSong.id}}" bindtap="handlePlayBarClick">
   <view class="left">
-    <image class="album" mode="aspectFill" src="{{currentSong.al.picUrl}}"></image>
+    <image class="album album-anim" 
+           mode="aspectFill" 
+           src="{{currentSong.al.picUrl}}"
+           style="animation-play-state: {{playAnimState}};"
+           ></image>
     <view class="name">{{currentSong.name}}</view>
   </view>
   <view class="right">
-    <image class="icon play" src="/assets/images/music/play_icon.png"></image>
-    <image class="icon playlist" src="/assets/images/music/playlist_icon.png"></image>
+    <image class="icon play" 
+           src="/assets/images/music/{{isPlaying ? 'pause' : 'play'}}_icon.png"
+           catchtap="handlePlayBtnClick"
+           ></image>
+    <image class="icon playlist" 
+           src="/assets/images/music/playlist_icon.png"
+           ></image>
   </view>
 </view>
